<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">一张彩票</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="trend_message">选择查看走势图</string>
    <string name="auther">--designed by HY</string>
    <string name="username">账号：1-20位</string>
    <string name="password">密码：6-14位</string>
    <string name="login">登录</string>
    <string name="forget_passwd">忘记密码？</string>
    <string name="selector_ssq_msg">2元可中1000万</string>
    <string name="selector_ssq_sensor">摇一摇机选</string>
	<string name="random_btn_bet">随机一注</string>
	<string name="random_btn_clear">清空</string>
	<string name="add_to_betting_list">加入投注单</string>
	<string name="ssq_bet_notes">至少选择6个红球+1个蓝球</string>
	<string name="msg_bet_format">共%1$s元\n%2$s注  %3$s倍</string>
	<string name="msg_tatol_money_format">共%s元</string>
	<string name="bet_btn">投注</string>
	<string name="ssq_betting_slip_list_num_format">%1$s | %2$s</string>
	<string name="ssq_betting_slip_list_multiple_msg_format">%1$.1s式  %2$s注  %3$s倍  %4$s元</string>
	<string name="betting_slip_final_msg_format">共%1$s元\n%2$s期  %3$s注  %4$s倍</string>
	<string name="push">推送</string>
	<string name="fragment_tab_notice_title_name">开奖公告</string>
	<string name="fragment_tab_notice_win_msg_format">一张彩票已累计中奖 %s元</string>
	<string name="fragment_tab_notice_fresh_drop_down">下拉刷新...</string>
	<string name="refresh_time_format">MM月dd日  HH:mm</string>
	<string name="push_on_off_txt">开奖通知</string>
	<string name="open_msg_format">第%1$s期    %2$s</string>
	<string name="click_refresh">点击刷新</string>
	<string name="net_failue">网络连接失败</string>
	<string name="loading_more">上拉显示更多</string>
	<string name="loading_more_release">松开加载更多</string>
	<string name="no_more_data">没有更多了</string>
	<string name="push_setting_txt">开奖通知设置</string>
	<string name="push_setting_refresh_msg">正在提交数据...</string>
	<string name="betting_slip_title_name">投注单</string>
	<string name="ssq_name">双色球</string>
	<string name="ssq_next_open_date_format">第%1$s期    截止%2$s  19:20:00</string>
	<string name="ssq_next_open_date_net_failure">获取彩期失败 !</string>
	<string name="fragment_tab_user_title_name">我的彩票</string>
	<string name="register">注册</string>
	<string name="confirm_register">确认注册</string>
	<string name="setting">设置</string>
	<string name="register_description">注册成功后，可用其管理您购买的彩票</string>
</resources>
