<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/login_title"
        style="@style/chooseballPagePaddingStyle01"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/red"
        android:gravity="center_vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="back"
                android:paddingEnd="20dp"
                android:src="@drawable/back_btn"
                android:visibility="visible" />

            <TextView
                android:id="@+id/account_type_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/title_location_bg_border"
                android:drawableEnd="@drawable/title_location_unclick"
                android:drawablePadding="5dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/fragment_tab_user_title_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="end"
            android:orientation="vertical"
            android:padding="20dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/user_editor_bg_border"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/editor_username_bg_border"
                    android:hint="@string/username"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:maxLength="20" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/editor_password_bg_border"
                    android:drawableEnd="@drawable/usercenter_pwd"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:maxLength="14" />
            </LinearLayout>

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/user_login_bg_selector"
                android:text="@string/login"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/forget_passwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:text="@string/forget_passwd"
                android:textColor="@color/blue02" />
        </LinearLayout>
        
        <TextView 
            android:id="@+id/account_type_popup_show_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:alpha="0.3"
            android:visibility="gone"/>
    </FrameLayout>

</LinearLayout>