<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/user_title"
        style="@style/chooseballPagePaddingStyle01"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/red"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back_btn"
            android:onClick="back"
            android:visibility="gone" />

        <TextView
            android:id="@+id/trend_title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/fragment_tab_user_title_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>
    
<ScrollView 
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/trend_message"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="10dp"
            android:text="@string/auther"
            android:textColor="@android:color/secondary_text_light_nodisable" />

        <com.hy.mylottery.TrendListView
            android:id="@+id/trend_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:dividerHeight="12dp"
            android:scrollbars="none" >
        </com.hy.mylottery.TrendListView>
    </LinearLayout>

</ScrollView>
</LinearLayout>