<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/user_title"
        style="@style/chooseballPagePaddingStyle01"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/red"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="15dp"
            android:onClick="back"
            android:src="@drawable/back_btn"
            android:visibility="visible" />

        <TextView
            android:id="@+id/register_title_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/back_btn"
            android:gravity="center"
            android:text="@string/fragment_tab_user_title_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray91"
        android:orientation="vertical"
        android:padding="15dp" >

        <RelativeLayout
            android:id="@+id/account_component"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/register_edit_bg_border"
            android:padding="10dp" >

            <TextView
                android:id="@+id/account_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="账号"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/username_clear"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:src="@drawable/register_clear"
                android:visibility="gone" />

            <EditText
                android:id="@+id/register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/account_name"
                android:layout_toStartOf="@id/username_clear"
                android:layout_centerVertical="true"
                android:background="@color/white"
                android:padding="5dp"
                android:hint="1-20位，数字、字母、汉字或符号（_、.、@）"
                android:maxLength="20"
                android:singleLine="true"
                android:textColor="@color/gray11"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/register_edit_bg_border"
            android:padding="10dp" >

            <TextView
                android:id="@+id/passwd_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="密码"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/is_passwd_type"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:src="@drawable/usercenter_pwd" />

            <ImageView
                android:id="@+id/passwd_clear"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_toStartOf="@id/is_passwd_type"
                android:layout_centerVertical="true"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:src="@drawable/register_clear"
                android:visibility="gone" />
            
            <EditText
                android:id="@+id/register_passwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/passwd_name"
                android:layout_toStartOf="@id/passwd_clear"
                android:layout_centerVertical="true"
                android:background="@color/white"
                android:padding="5dp"
                android:hint="6-14位，建议数字、字母、符号组合"
                android:maxLength="10"
                android:singleLine="true"
                android:textColor="@color/gray11"
                android:textSize="14sp"
                android:inputType="textPassword" />
            
        </RelativeLayout>
        

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/register_description"
            android:textColor="@color/grey"
            android:textSize="14sp" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/SkyBlue2"
            android:gravity="center"
            android:text="@string/confirm_register"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>